2006-01-19  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/expression.py (UnaryOperation, BinaryOperation, LessThan) 
	(LessThanOrEqual, GreaterThan, GreaterThanOrEqual, Or, Not): 
	* serql/serql.py (Parser.selectQueryExpr): 
	* serql/serql.g (selectQuery, booleanExpr, andExpr)
	(booleanElem, compOp, varOrValue, value):
	Parse the WHERE clause in the SELECT statement with a limited set
	of valid expressions, and produce a corresponding expression tree.

2006-01-18  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/expression.py (Map, NameColumns): 
	* serql/serql.py (SelectContext.expandVariables) 
	(Parser.graphPatternExpr): 
	* serql/serql.g (selectQuery, projection, projectionElem):
	Parse a simplified version of the SELECT statement a produce a
	corresponding expression tree, with value mapping and named
	columns.

2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/expression.py (Operation, Comparison, Equal, Different) 
	(BooleanOperation, And): Don't specify operators as parameters,
	use new node classes instead.

	* tree/rewrite.py (promoteSelect.operation) 
	(flattenSelect.operation): 
	* serql/serql.py (SelectContext.getCondition) 
	(Parser.exprFromTriple): 
	Adapt to the new node classes.

2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/rewrite.py (promoteSelect, flattenSelect): New
	simplification operations.

2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/rewrite.py (remakeExpr, treeMatchApply.operationWrapper) 
	(flattenAssoc.operation): Factor expression rebuild.

2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/rewrite.py (treeMatchApply): New apply operation for
	transformations that only affect a particular node type.
	(flattenAssoc): Implement based on treeMatchApply.

2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/rewrite.py (treeApply, flattenAssoc.operation): Return a